# studio-sdp-mirror

./: .blackignore  .coverage  .cursorrules  .gitignore  .last_position_self_test_sync_speed.json  .last_position_speed_logs.json  API_INTEGRATION_GUIDE.md  BaccaratDetect.py  CICD.md  CODE_OBFUSCATION_GUIDE.md  DIRECT_IDP_LOGGING_IMPLEMENTATION.md  DUPLICATE_DETECTION_FIX.md  GRAFANA_LOKI_QUERIES.md  HARDWARE_IMPORT_FIX_SUMMARY.md  IDP_RESULT_PROCESSING_FIX.md  IDP_TIMEOUT_COMMAND_INTEGRATION.md  LOCAL_BUILD_SUCCESS.md  LOKI_LOGQL_QUERIES.md  MANIFEST.in  MQTT_FAILOVER_README.md  MQTT_LOGGING_ENHANCEMENT.md  MQTT_MIGRATION_GUIDE.md  OBFUSCATION_IMPLEMENTATION_SUMMARY.md  PACKAGING_SUMMARY.md  README.md  README_LOG_SEPARATION.md  README_MANUAL_HOTRELOAD.md  ROULETTE_DETECTION_FIX.md  ROULETTE_DETECTION_TIMING.md  ROULETTE_SINGLE_DETECT.md  ROULETTE_TEST_README.md  SDP-design.md  SDP-prototype.py  SERIAL_IDP_RESULT_COMPARISON.md  SHIV_PACKAGING_REFERENCE.md  SLACK_MIGRATION_SUMMARY.md  SSH_SETUP_INSTRUCTIONS.md  X5_DEAL_POST_FIX.md  __init__.py  analyze_ballspin_time.py  (+124 more)
.github/: dependabot.yml
1217-sdp-err-inject/: sdp-1217-debug-err.py  sdp-err-inj.py
1219-sdp-dice/: analogist.py  generator.py  sdp-1219-diceshaker.py
GITACTION_DOC/: BUILD_DEPENDENCY_FIX_SUMMARY.md  BUILD_FIXES.md  BUILD_YML_MODIFICATION_SUMMARY.md  FORMATTING_UPDATE_SUMMARY.md  GITACTION_APPLY_SUMMARY.md  GIT_CI_CONTROL_README.md  GIT_CI_QUICK_REFERENCE.md  GIT_HOOKS_README.md  GIT_HOOKS_SUMMARY.md  PYTEST_ISSUES_RESOLUTION_SUMMARY.md  PYTEST_UPDATE_SUMMARY.md  PYZ_DEPENDENCY_FIX_SUMMARY.md  PYZ_MODULE_IMPORT_FIX_SUMMARY.md  local_build_success.md
LOS-api/: LOS_get_game_state.py  LOS_get_game_state_color.py  SDP-to-LOS-workflow.py  SDP_deal.py  SDP_finished.py  SDP_login.py  SDP_start.py  test_sdp_to_los_api.py
TABLEAPI_DOC/: QUICK_JSON_FORMAT.md
back_up/: README.md  mock_ARO_001_1.py  mock_ARO_001_2.py  mock_studio_api.py
cardRandomness/: compareSeq.py  serialCorrelation.py  statTable.py  utils.py
conf/: baccarat-broker.json  blackjack_machine.json  demo-table.json  mock_studio_api.json  params-aro12.json  params-aro21.json  roulette-aro-broker.json  roulette-broker.json  roulette_machine_speed.json  roulette_machine_vip.json  sb.json  sicbo-broker.json  sr-1.json  sr-2-all.json  sr-2.json  sr_dev.json  table-config-baccarat-v2.json  table-config-scibo-v2.json  table-config-scibo.json  table-config-sicbo-v2.json  table-config-speed-roulette-v2-debug.json  table-config-speed-roulette-v2.json  table-config-speed-roulette.json  table-config-vip-roulette-v2.json  table-config-vip-roulette-v2.json.backup  table-config-vip-roulette.json  vr-1.json  vr-2-test.json  vr-2.json  vr-dev.json  vr_dev.json  ws.json  ws.json.mock
daemon/: Dockerfile  Dockerfile.simple  docker-compose.simple.yml  docker-compose.yml  mock_SBO_001_1.py  start-daemon.sh  test-boot-autostart.sh  test-simple-daemon.sh
doc/: README-overview.md  SDP-design.md  test_design.md
docker_test_env/: Dockerfile  requirements.txt  side_record.py
docs/: README.md  index.md
img/: overall-0926.drawio  p49.png.txt  p50.md
legacy/: serial-port-sim.py
los_api/: __init__.py  api_v2.py  api_v2_uat.py  get_access_token.py
metrics/: check_prometheus_metrics.py  prom_duration.py  prom_duration_aro21.py  prom_duration_aro22.py  prom_duration_sbo11.py  prom_serial.py  query_aro22_metrics.sh  test_prom_metrics.py
mqtt/: base_client.py  complete_system.py  config_manager.py  connection_manager.py  demo_complete_system.py  demo_config_manager.py  demo_connection_manager.py  demo_integrated_system.py  demo_message_processor.py  demo_unified_client.py  deviceController.py  (+3 more)
proto/: hid.py  (+4 more)
(+301 files in other folders)
