[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "studio_sdp_roulette"
version = "1.0.0"
description = "SDP Game System with Roulette, SicBo, and Baccarat Controllers"
authors = [
    {name = "Studio SDP Team", email = "team@studio-sdp.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "websockets>=10.0",
    "asyncio-mqtt>=0.11.0",
    "paho-mqtt>=1.6.1",
    "requests>=2.28.0",
    "json5>=0.9.0",
    "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
roulette-vip = "main_vip:main"
roulette-speed = "main_speed:main"
roulette-scibo = "main_scibo:main"
roulette-baccarat = "main_baccarat:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "setup*", "proto*", "self_test*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
